--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,59 @@
+What's new in Sudo 1.9.15
+
+ * Fixed an undefined symbol problem on older versions of macOS
+   when "intercept" or "log_subcmds" are enabled in sudoers.
+   GitHub issue #276.
+
+ * Fixed "make check" failure related to getpwent(3) wrapping
+   on NetBSD.
+
+ * Fixed the warning message for "sudo -l command" when the command
+   is not permitted.  There was a missing space between "list" and
+   the actual command due to changes in sudo 1.9.14.
+
+ * Fixed a bug where output could go to the wrong terminal if
+   "use_pty" is enabled (the default) and the standard input, output
+   or error is redirected to a different terminal.  Bug #1056.
+
+ * The visudo utility will no longer create an empty file when the
+   specified sudoers file does not exist and the user exits the
+   editor without making any changes.  GitHub issue #294.
+
+ * The AIX and Solaris sudo packages on www.sudo.ws now support
+   "log_subcmds" and "intercept" with both 32-bit and 64-bit
+   binaries.  Previously, they only worked when running binaries
+   with the same word size as the sudo binary.  GitHub issue #289.
+
+ * The sudoers source is now logged in the JSON event log.  This
+   makes it possible to tell which rule resulted in a match.
+
+ * Running "sudo -ll command" now produces verbose output that
+   includes matching rule as well as the path to the sudoers file
+   the matching rule came from.  For LDAP sudoers, the name of the
+   matching sudoRole is printed instead.
+
+ * The embedded copy of zlib has been updated to version 1.3.
+
+ * The sudoers plugin has been modified to make it more resilient
+   to ROWHAMMER attacks on authentication and policy matching.
+   This addresses CVE-2023-42465.
+
+ * The sudoers plugin now constructs the user time stamp file path
+   name using the user-ID instead of the user name.  This avoids a
+   potential problem with user names that contain a path separator
+   ('/') being interpreted as part of the path name.  A similar
+   issue in sudo-rs has been assigned CVE-2023-42456.
+
+ * A path separator ('/') in a user, group or host name is now
+   replaced with an underbar character ('_') when expanding escapes
+   in @include and @includedir directives as well as the "iolog_file"
+   and "iolog_dir" sudoers Default settings.
+
+ * The "intercept_verify" sudoers option is now only applied when
+   the "intercept" option is set in sudoers.  Previously, it was
+   also applied when "log_subcmds" was enabled.  Sudo 1.9.14
+   contained an incorrect fix for this.  Bug #1058.
+
 What's new in Sudo 1.9.14p3
 
  * Fixed a crash with Python 3.12 when the sudo Python python is
@@ -90,10 +146,6 @@ What's new in Sudo 1.9.14
    --enable-adminconf configure option can be used to specify a
    directory that is searched for configuration files in preference
    to the sysconfdir (which is usually /etc).
-
- * The "intercept_verify" sudoers option is now only applied when
-   the "intercept" option is set in sudoers.  Previously, it was
-   also applied when "log_subcmds" was enabled.
 
  * The NETGROUP_QUERY ldap.conf parameter can now be disabled for
    LDAP servers that do not support querying the nisNetgroup object
