Sudo now logs the submitenv in the JSON logs.

--- a/NEWS
+++ b/NEWS
@@ -78,6 +78,11 @@ What's new in Sudo 1.9.15
    disabled.  Previously, "command not allowed" would be logged and
    the user had no way of knowing what the actual problem was.
 
+ * Sudo will now log the invoking user's environment as "submitenv"
+   in the JSON logs.  The command's environment ("runenv") is no
+   longer logged for commands rejected by the sudoers file or an
+   approval plugin.
+
 What's new in Sudo 1.9.14p3
 
  * Fixed a crash with Python 3.12 when the sudo Python python is
