In the sudo 1.9.14p3 section, "Python python" should be "Python plugin".

--- a/NEWS
+++ b/NEWS
@@ -85,7 +85,7 @@ What's new in Sudo 1.9.15
 
 What's new in Sudo 1.9.14p3
 
- * Fixed a crash with Python 3.12 when the sudo Python python is
+ * Fixed a crash with Python 3.12 when the sudo Python plugin is
    unloaded.  This only affects "make check" for the Python plugin.
 
  * Adapted the sudo Python plugin test output to match Python 3.12.
