--- a/NEWS
+++ b/NEWS
@@ -52,9 +52,11 @@ What's new in Sudo 1.9.16
    the --with-insults configure option is specified or the "insults"
    sudoers option is enabled.
 
- * The default sudoers file now enables the "secure_path" option
-   by default and preserves the EDITOR, VISUAL, and SUDO_EDITOR
-   environment variables when running visudo.
+ * The default sudoers file now enables the "secure_path" option by
+   default and preserves the EDITOR, VISUAL, and SUDO_EDITOR environment
+   variables when running visudo.  The new --with-secure-path-value
+   configure option can be used to set the value of "secure_path" in
+   the default sudoers file.  GitHub issue #387.
 
  * A sudoers schema for IBM Directory Server (aka IBM Tivoli Directory
    Server, IBM Security Directory Server, and IBM Security Verify
